Added PogChamp to Lingo

--- a/src/templates/legit.html
+++ b/src/templates/legit.html
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Legit</h1>
     <p>
-        Example, you ate something good. You say: Those fries were LEGIT good!
+        Example, you ate something good. You say: Those fries were LEGIT so good!
     </p>
     <p>
         Note: Zoomer and GenZ people use this word a lot nowadays; just try to
