--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -2,8 +2,10 @@
 
 <html lang="en">
     <head>
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <title>Modern Lingo 101</title>
+        <meta name="viewport" content="initial-scale=2, width=device-width">
+        <title>Modern Lingo 101</title><!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
         {% block body %}{% endblock %}
