small ui changes

--- a/src/templates/bt_mat_de.html
+++ b/src/templates/bt_mat_de.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-
+<body>
 {% block body %}
     <h1>Bt mat de</h1>
     <p>
@@ -8,3 +8,4 @@
         shove it in every sentence to look cool!
     </p>
 {% endblock %}
+</body>
