--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,18 +1,35 @@
 {% extends "layout.html" %}
 
 {% block body %}
-    <h1>Welcome lingo-learners!</h1>
-    <p>
-        Welcome to Modern Lingo 101. Here, you'll modern chatting principles.
-        Please select a lingo to learn more.
-    </p>
-    <form action="/lingo" method="post">
-        <select name="lingo">
-            <option disabled selected value="">Lingo</option>
-            {% for lingo in lingos %}
-                <option value="{{ lingo }}">{{ lingo }}</option>
-            {% endfor %}
-        </select>
-        <input type="submit" value="Go there">
-    </form>
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta name="viewport" content="initial-scale=2, width=device-width">
+        <title>Modern Lingo 101</title><!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <!-- Bootstrap CSS -->
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous"><link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+         -->
+    </head>
+    <body>
+        <h1 class="h1">Welcome lingo-learners!</h1>
+        <p>
+            Welcome to Modern Lingo 101. Here, you'll modern chatting principles.
+            Please select a lingo to learn more.
+        </p>
+        <form action="/lingo" method="post">
+            <select name="lingo">
+                <option disabled selected value="">Lingo</option>
+                {% for lingo in lingos %}
+                    <option value="{{ lingo }}">{{ lingo }}</option>
+                {% endfor %}
+            </select>
+            <input type="submit" value="Go there">
+        </form>
+    </body>
+</html>
+
 {% endblock %}
