--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>{{ the_title }}</title>
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Source+Sans+Pro" rel="stylesheet">
+	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+</head>
 
-<html lang="en">
-    <head>
-        <meta name="viewport" content="initial-scale=2, width=device-width">
-        <title>Modern Lingo 101</title><!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<body>
+
+<div id="container">
+
+  {% block body %}
+  {% endblock %}
+
+</div>
+
+</body>
 </html>
